--- a/css/main.css
+++ b/css/main.css
@@ -525,6 +525,10 @@ video {
   top: -3.5rem;
 }
 
+.-top-40 {
+  top: -10rem;
+}
+
 .-top-44 {
   top: -11rem;
 }
@@ -539,6 +543,14 @@ video {
 
 .z-10 {
   z-index: 10;
+}
+
+.z-40 {
+  z-index: 40;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .-mt-6 {
@@ -601,8 +613,16 @@ video {
   margin-right: 1rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .mt-8 {
   margin-top: 2rem;
+}
+
+.block {
+  display: block;
 }
 
 .flex {
@@ -631,6 +651,10 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.w-1 {
+  width: 0.25rem;
 }
 
 .w-1\/2 {
@@ -747,6 +771,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -821,12 +850,21 @@ video {
   line-height: 1.75rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
 
 .font-thin {
   font-weight: 100;
+}
+
+.italic {
+  font-style: italic;
 }
 
 .leading-7 {
@@ -845,6 +883,11 @@ video {
 .text-moderateCyan {
   --tw-text-opacity: 1;
   color: hsl(176 50% 47% / var(--tw-text-opacity));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -877,6 +920,10 @@ video {
   outline-offset: 2px;
 }
 
+.duration-200 {
+  transition-duration: 200ms;
+}
+
 header{
   height: 299px;
 }
@@ -898,6 +945,12 @@ header{
   background: linear-gradient(to top, lightgray, white);
 }
 
+/* Close Modal Hover Styling */
+
+svg{
+  color: #fff;
+}
+
 /* Hamburger Styling */
 
 .open{
@@ -915,7 +968,7 @@ header{
 
 /* Second || Donation Menu */
 
-#project-donation-menu{
+#modal-menu{
   width: 327px;
 }
 
@@ -929,8 +982,340 @@ input[type="radio"] {
   transform: scale(1.5);
 }
 
+/* Thank You Page */
+
+#thankYou{
+  width: 328px;
+}
+
 /* When Active */
 
 .active{
   border-color: hsl(176, 50%, 47%);
+}
+
+/* When Failed */
+
+.red{
+  border-color: red;
+}
+
+#errMessage{
+  margin-right: 10px;
+  font-style: italic;
+  font-size: 10px;
+}
+
+/* Overlay */
+
+.overlay{
+  position: fixed;
+  background-color: black;
+  opacity: .5;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 150%;
+  height: 100%;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
+
+.overlay-two{
+  position: fixed;
+  background-color: black;
+  opacity: .5;
+  z-index: 30;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 150%;
+  height: 100%;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
+
+.overlay-three{
+  position: fixed;
+  background-color: black;
+  opacity: .5;
+  z-index: 40;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 150%;
+  height: 100%;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
+
+/* Desktop Design */
+
+#desktop-menu{
+  width: 350px;
+}
+
+@media (min-width: 976px) {
+  header{
+    height: 550px;
+  }
+
+  #bg-image{
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0)), url('/images/image-hero-desktop.jpg');
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: cover;
+  }
+
+  #main-container{
+    width: 730px;
+  }
+
+  #modal-menu{
+    width: 738px;
+  }
+
+  #thankYou{
+    width: 479px;
+  }
+}
+
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
+}
+
+.hover\:bg-darkCyan:hover {
+  --tw-bg-opacity: 1;
+  background-color: hsl(176 72% 28% / var(--tw-bg-opacity));
+}
+
+.hover\:text-moderateCyan:hover {
+  --tw-text-opacity: 1;
+  color: hsl(176 50% 47% / var(--tw-text-opacity));
+}
+
+@media (min-width: 320px) {
+  .sm\:hidden {
+    display: none;
+  }
+}
+
+@media (min-width: 976px) {
+  .lg\:-top-32 {
+    top: -8rem;
+  }
+
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .lg\:mb-11 {
+    margin-bottom: 2.75rem;
+  }
+
+  .lg\:mb-28 {
+    margin-bottom: 7rem;
+  }
+
+  .lg\:mb-32 {
+    margin-bottom: 8rem;
+  }
+
+  .lg\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
+  .lg\:ml-6 {
+    margin-left: 1.5rem;
+  }
+
+  .lg\:ml-9 {
+    margin-left: 2.25rem;
+  }
+
+  .lg\:mr-12 {
+    margin-right: 3rem;
+  }
+
+  .lg\:mr-4 {
+    margin-right: 1rem;
+  }
+
+  .lg\:mr-52 {
+    margin-right: 13rem;
+  }
+
+  .lg\:mr-6 {
+    margin-right: 1.5rem;
+  }
+
+  .lg\:mt-8 {
+    margin-top: 2rem;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:w-4\/5 {
+    width: 80%;
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:flex-col {
+    flex-direction: column;
+  }
+
+  .lg\:items-start {
+    align-items: flex-start;
+  }
+
+  .lg\:items-center {
+    align-items: center;
+  }
+
+  .lg\:justify-center {
+    justify-content: center;
+  }
+
+  .lg\:justify-between {
+    justify-content: space-between;
+  }
+
+  .lg\:border-r-2 {
+    border-right-width: 2px;
+  }
+
+  .lg\:border-none {
+    border-style: none;
+  }
+
+  .lg\:p-0 {
+    padding: 0px;
+  }
+
+  .lg\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .lg\:px-44 {
+    padding-left: 11rem;
+    padding-right: 11rem;
+  }
+
+  .lg\:px-7 {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+  }
+
+  .lg\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .lg\:px-9 {
+    padding-left: 2.25rem;
+    padding-right: 2.25rem;
+  }
+
+  .lg\:pr-11 {
+    padding-right: 2.75rem;
+  }
+
+  .lg\:pr-20 {
+    padding-right: 5rem;
+  }
+
+  .lg\:pr-6 {
+    padding-right: 1.5rem;
+  }
+
+  .lg\:pr-8 {
+    padding-right: 2rem;
+  }
+
+  .lg\:pt-16 {
+    padding-top: 4rem;
+  }
+
+  .lg\:text-center {
+    text-align: center;
+  }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .lg\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .lg\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:font-bold {
+    font-weight: 700;
+  }
+
+  .lg\:leading-10 {
+    line-height: 2.5rem;
+  }
+
+  .lg\:text-darkCyan {
+    --tw-text-opacity: 1;
+    color: hsl(176 72% 28% / var(--tw-text-opacity));
+  }
+
+  .lg\:text-darkGrey {
+    --tw-text-opacity: 1;
+    color: hsl(0 0% 48% / var(--tw-text-opacity));
+  }
+
+  .lg\:shadow-none {
+    --tw-shadow: 0 0 #0000;
+    --tw-shadow-colored: 0 0 #0000;
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+}
+
+@media (min-width: 1440px) {
+  .xl\:top-10 {
+    top: 2.5rem;
+  }
 }
