--- a/css/main.css
+++ b/css/main.css
@@ -621,10 +621,6 @@ video {
   margin-top: 2rem;
 }
 
-.block {
-  display: block;
-}
-
 .flex {
   display: flex;
 }
@@ -929,7 +925,7 @@ header{
 }
 
 #bg-image{
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0)), url('/images/image-hero-mobile.jpg');
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0)), url('./images/image-hero-mobile.jpg');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -1062,7 +1058,7 @@ input[type="radio"] {
   }
 
   #bg-image{
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0)), url('/images/image-hero-desktop.jpg');
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0)), url('./images/image-hero-desktop.jpg');
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
